# azerbaijani-tokenizer

./: .env.example  .gitignore  README.md  pyproject.toml
evaluation/: performance.ipynb
tokenizer/: azerbaijani_bpe.model  azerbaijani_bpe.vocab  azerbaijani_unigram.model  azerbaijani_unigram.vocab
train/: train_epa.ipynb  train_unigram.ipynb
utils/: clean.py
